--- a/KaranSinMorsommeFerie/A Hoved Database/klesplagg.html
+++ b/KaranSinMorsommeFerie/A Hoved Database/klesplagg.html
@@ -27,7 +27,6 @@
 <body>
   <header>
 
-
     <section class="header_øverst">
 
       <!-- kode for den lange hvite linjen øverst -->
@@ -36,7 +35,6 @@
       </section>
 
       <section class="usynlig">
-
       </section>
 
       <!-- kode for logoen -->
@@ -50,38 +48,25 @@
 
 
       <!-- kode for logg inn, og handlekurv knappene er under her  -->
-      <section class="lenke logginn">
-
-
+      <section class="lenke ">
         <a href="logginn.html"><img src="bilder_klær_riktig/innlogging.svg" alt="bilde" class="iconbilde"> </a>
-
         <a href="logginn.html"><br>LOGG INN</a>
-
       </section>
 
 
       <!-- kode for  ønskeliste og knappene er under her  -->
-      <section class="lenke logginn ønskeliste">
-
+      <section class="lenke  ønskeliste">
         <a href="ønskeliste.html"><img src="bilder_klær_riktig/ønskeliste.png" alt="bilde" class="iconbilde"> </a>
-
         <a href="ønskeliste.html">ØNSKELISTE</a>
-
       </section>
 
-      <section class="lenke logginn handlekurv">
-
-
+      <section class="lenke handlekurv">
         <a href="handlekurv.html"><img src="bilder_klær_riktig/kurv1.png" alt="bilde" class="iconbilde"> </a>
-
         <a href=handlekurv.html><br>KURV</a>
-
-
       </section>
 
     </section>
     <!-- slutt på kode for handlekurv, ønskeliste og logg inn -->
-
 
     <!-- kode for søkefeltet -->
     <section class="søkemotor">
@@ -89,7 +74,6 @@
       <input type="text" placeholder="Søk etter klær eller merker...">
       <button type="submit"><i class="fa fa-search"></i></button>
     </section>
-
 
 
     <!-- kode for navigasjonbarene starter under her-->
@@ -103,7 +87,6 @@
           <a href="bukser.html">Bukser</a>
           <a href="skjorter.html">skjorter</a>
           <a href="jakker.html">jakker</a>
-
         </section>
       </section>
 
@@ -111,7 +94,6 @@
       <!-- kode for knapper som ikke har dropdown i navigasjons baren-->
       <section class="dropned">
         <a href="sport.html" class="dropknapp">Sport</a>
-
       </section>
 
       <section class="dropned">
@@ -125,14 +107,11 @@
 
       <section class="dropned">
         <a href="nyheter.html" class="dropknapp">Nyheter</a>
-
       </section>
 
       <section class="dropned">
         <a href="salg.html" class="dropknapp">Salg</a>
-
       </section>
-
 
     </nav>
     <!-- kode for navigasjons varen er slutt  -->
@@ -143,146 +122,129 @@
 
   <!-- kode for tilbake knapp -->
   <button class="tilbake_knapp" onclick="goBack()">
-    <--Tilbake </button>
+    <--Tilbake </button> <!--kode for main under her-->
+      <main>
+        <section id="main">
+        </section>
 
-<!--kode for main under her-->
-<main>
-  <section id="main">
+        <section class="lignendeProdukter">
+          <h1>Folk liker også</h1>
+        </section>
+        <section class="seclignendeProdukter">
 
-  </section>
-
-<section class="lignendeProdukter">
-<h1>Folk liker også</h1>
-</section>
-  <section class="seclignendeProdukter">
-
-  </section>
-</main>
+        </section>
+      </main>
 
       <!-- kode for reklamen-->
       <section class="reklame2">
         <a href="klær.html"><img src="bilder_klær_riktig/reklame_2bild.jpg" alt="bilde"></a>
       </section>
 
+      <!-- kode for innholdet i footer -->
+      <footer>
 
-        <!-- kode for innholdet i footer -->
-        <footer>
+        <section class="hele_footer">
 
-          <section class="hele_footer">
-
-            <!-- kode for linje 1 i footer -->
-            <section class="om_oss_footer">
-              <table>
-                <thead>
-                  <tr>
-                    <th>INFORMASJON</th>
-                  </tr>
-                </thead>
-                <tbody>
-                  <tr>
-                    <td><a href="logginn.html"> LOGG INN</a></td>
-                  </tr>
-                  <tr>
-                    <td><a href="ønskeliste.html">ØNSKELISTE</a></td>
-                  </tr>
-                  <tr>
-                    <td><a href="kundeservice.html">KONTAKT OSS</a></td>
-                  </tr>
-                  <tr>
-                    <td><a href="oss.html">FÅ NYHETSBREV</a></td>
-                  </tr>
-                </tbody>
-
-              </table>
-            </section>
-
-            <!-- kode for linje 2 i footer -->
-            <section class="oss_footer">
-              <table>
-                <thead>
-                  <tr>
-                    <th><a href="index.html">VARER</a></th>
-                  </tr>
-                </thead>
-                <tbody>
-                  <tr>
-                    <td> <a href="klær.html">klær</a>
-                    </td>
-                  </tr>
-                  <tr>
-                    <td><a href="sport.html">sport</a>
-                    </td>
-                  </tr>
-                  <tr>
-                    <td><a href="sko.html">sko</a></td>
-                  </tr>
-                  <tr>
-                    <td><a href="tilbehor.html">tilbehør</a></td>
-                  </tr>
-                </tbody>
-
-              </table>
-
-            </section>
-
-            <!-- kode for linje 3 i footer -->
-            <section class="oss_footer">
-              <table>
-                <thead>
-                  <tr>
-                    <th><a href="oss.html">OM OSS</a></th>
-                  </tr>
-                </thead>
-                <tbody>
-                  <tr>
-                    <td><a href="oss.html">søk jobb</a></td>
-                  </tr>
-                  <tr>
-                    <td><a href="oss.html">ansatte</a>
-                    </td>
-                  </tr>
-                  <tr>
-                    <td><a href="oss.html">historikk</a></td>
-                  </tr>
-
-                </tbody>
-
-              </table>
-
-            </section>
-
-
-
-            <!-- del av footer med sosiale medier bilder -->
-            <section class="sosial_footer">
-              <table>
-                <thead>
-                  <tr>
-                    <th>Følg oss</th>
-                  </tr>
-                </thead>
-                <tbody>
-                  <tr>
-                    <td><a href="http://www.facebook.com"><img src="bilder_klær_riktig/face.png" class="sosbilder"></a></td>
-                    <td><a href="http://www.twitter.com"><img src="bilder_klær_riktig/twit.png" class="sosbilder"></a></td>
-                    <td><a href="http://www.instagram.com"><img src="bilder_klær_riktig/insta.jpg" class="sosbilder"></a></td>
-                  </tr>
-
-                </tbody>
-
-              </table>
-            </section>
-
-
-
+          <!-- kode for linje 1 i footer -->
+          <section class="om_oss_footer">
+            <table>
+              <thead>
+                <tr>
+                  <th>INFORMASJON</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td><a href="logginn.html"> LOGG INN</a></td>
+                </tr>
+                <tr>
+                  <td><a href="ønskeliste.html">ØNSKELISTE</a></td>
+                </tr>
+                <tr>
+                  <td><a href="kundeservice.html">KONTAKT OSS</a></td>
+                </tr>
+                <tr>
+                  <td><a href="oss.html">FÅ NYHETSBREV</a></td>
+                </tr>
+              </tbody>
+            </table>
           </section>
-        </footer>
-        <!-- footer slutter her-->
 
+          <!-- kode for linje 2 i footer -->
+          <section class="oss_footer">
+            <table>
+              <thead>
+                <tr>
+                  <th><a href="index.html">VARER</a></th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td> <a href="klær.html">klær</a>
+                  </td>
+                </tr>
+                <tr>
+                  <td><a href="sport.html">sport</a>
+                  </td>
+                </tr>
+                <tr>
+                  <td><a href="sko.html">sko</a></td>
+                </tr>
+                <tr>
+                  <td><a href="tilbehor.html">tilbehør</a></td>
+                </tr>
+              </tbody>
+            </table>
+          </section>
 
-        <!-- javascript starter under her -->
+          <!-- kode for linje 3 i footer -->
+          <section class="oss_footer">
+            <table>
+              <thead>
+                <tr>
+                  <th><a href="oss.html">OM OSS</a></th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td><a href="oss.html">søk jobb</a></td>
+                </tr>
+                <tr>
+                  <td><a href="oss.html">ansatte</a>
+                  </td>
+                </tr>
+                <tr>
+                  <td><a href="oss.html">historikk</a></td>
+                </tr>
+              </tbody>
+            </table>
+          </section>
+
+          <!-- del av footer med sosiale medier bilder -->
+          <section class="sosial_footer">
+            <table>
+              <thead>
+                <tr>
+                  <th>Følg oss</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td><a href="http://www.facebook.com"><img src="bilder_klær_riktig/face.png" class="sosbilder"></a></td>
+                  <td><a href="http://www.twitter.com"><img src="bilder_klær_riktig/twit.png" class="sosbilder"></a></td>
+                  <td><a href="http://www.instagram.com"><img src="bilder_klær_riktig/insta.jpg" class="sosbilder"></a></td>
+                </tr>
+              </tbody>
+            </table>
+          </section>
+
+        </section>
+      </footer>
+      <!-- footer slutter her-->
+
+      <!-- javascript starter under her -->
       <script>
-        const main = document.querySelector("#main");
+        const main = document.querySelector("#main"); // Variabel som referer til main id-elementet
         const seclignendeProdukter = document.querySelector(".seclignendeProdukter");
 
         let url_string = window.location.href;
@@ -296,7 +258,7 @@
         //Skriv referanser til database under her:
         const db = firebase.database();
         const Valgt_vare = db.ref("varer/" + parentId + "/" + id);
-        const bukser = db.ref("varer/bukser");
+        const bukser = db.ref("varer/bukser"); //Referere til dataene som ligger under varer/bukser.
         const skjorter = db.ref("varer/skjorter");
         const gensere = db.ref("varer/gensere");
         const sport = db.ref("varer/sport");
@@ -312,7 +274,8 @@
           let data = snapshot.val();
           let parent = snapshot.ref.parent.key;
           //Javascript-funksjon som skriver varene ut på nettsiden i main-elementet
-          main.innerHTML +=`
+          main.innerHTML +=
+            `
 <section class="bilde_liten">
 <section class="bilde_liten1">  <img src="${data.bilde2}" alt=""> </section>
 <section class="bilde_liten2">  <img src="${data.bilde3}" alt=""> </section>
@@ -324,43 +287,40 @@
 <a href="kundeservice.html" class="tilbakemelding">Tilbakemelding</a> </p>
 <section class="styled-select slate">
   <select>
-    <option value="størrelse" class="hver_str_alene">STØRRELSE</option>
-    <option value="størrelse">BLÅ</option>
-    <option value="størrelse">SVART</option>
-    <option value="størrelse">RØD</option>
-    <option value="størrelse">GRÅ</option>
-    <option value="størrelse">BRUN</option>
+
+
+    <option value="farge" class="hver_str_alene">FARGE</option>
+    <option value="farge">${data.Farge1}</option>
   </select>
   <section class="styled-select slate">
     <select>
-      <option value="størrelse" class="hver_str_alene">FARGE</option>
-      <option value="størrelse">XS</option>
-      <option value="størrelse">S</option>
-      <option value="størrelse">M</option>
-      <option value="størrelse">L (kun 3 igjen)</option>
-      <option value="størrelse">XL</option>
+      <option value="størrelse" class="hver_str_alene"> STØRRELSE</option>
+      <option value="størrelse">${data.Storrelse}</option>
+      <option value="størrelse">${data.Storrelse1}</option>
+      <option value="størrelse">${data.Storrelse2}</option>
     </select>
     <section class="styled-select slate">
       <select>
-        <option value="størrelse" class="hver_str_alene">ANTALL</option>
-        <option value="størrelse">1</option>
-        <option value="størrelse">2</option>
-        <option value="størrelse">3</option>
-        <option value="størrelse">4</option>
-        <option value="størrelse">ikke flere på lager</option>
+        <option value="ANTALL" class="hver_str_alene">ANTALL</option>
+        <option value="ANTALL">1</option>
+        <option value="ANTALL">2</option>
+        <option value="ANTALL">3</option>
+        <option value="ANTALL">4</option>
+        <option value="ANTALL">ikke flere på lager</option>
       </select>
 </section>
 
 <button type="submit" class="handlekurv_knapp"> Legg til i handlekurv
 </button>
 `;
-      }
+        }
 
-function genererHTML(snapshot){
-  let key = snapshot.key;
-  let data = snapshot.val();
-  let parent = snapshot.ref.parent.key;
-  seclignendeProdukter.innerHTML +=`
+        function genererHTML(snapshot) {
+          let key = snapshot.key;
+          let data = snapshot.val();
+          let parent = snapshot.ref.parent.key;
+          seclignendeProdukter.innerHTML +=
+            `
 <section class="lignende_hvert_produkt">
 <section class="bilde_liten">
 <a href="klesplagg.html?id=${key}&parent=${parent}" class="link_lignende">
@@ -375,11 +335,12 @@ function genererHTML(snapshot){
 </section>
 
 `;
-}
+        }
+
         function lignendeProdukter() {
           skjorter
             .limitToFirst(1)
-            .on("child_added", genererHTML);
+            .on("child_added", genererHTML); // viser frem det spesifikke vi vil vise på den måten vi har valgt i genrererHTML
           gensere
             .limitToFirst(1)
             .on("child_added", genererHTML);
@@ -387,24 +348,21 @@ function genererHTML(snapshot){
             .limitToFirst(1)
             .on("child_added", genererHTML);
           jakker
-          .limitToFirst(1)
+            .limitToFirst(1)
             .on("child_added", genererHTML);
-         bukser
-         .limitToFirst(1)
-         .on("child_added", genererHTML);
-         tilbehor
-         .limitToFirst(1)
-         .on("child_added", genererHTML);
+          bukser
+            .limitToFirst(1)
+            .on("child_added", genererHTML);
+          tilbehor
+            .limitToFirst(1)
+            .on("child_added", genererHTML);
         };
         sko
-        .limitToFirst(1)
-        .on("child_added", genererHTML);
+          .limitToFirst(1)
+          .on("child_added", genererHTML);
 
         lignendeProdukter();
-
       </script>
-
-
 
 </body>
 
