--- a/KaranSinMorsommeFerie/A Hoved Database/bukser.html
+++ b/KaranSinMorsommeFerie/A Hoved Database/bukser.html
@@ -23,12 +23,11 @@
     firebase.initializeApp(config);
   </script>
 
-
 </head>
 
 <body>
   <header>
-
+    <!-- seksjon for den delen over søkemotoren -->
     <section class="header_øverst">
 
       <!-- kode for den lange hvite linjen øverst -->
@@ -37,7 +36,6 @@
       </section>
 
       <section class="usynlig">
-
       </section>
 
       <!-- kode for logoen -->
@@ -45,37 +43,24 @@
         <a href="index.html"><img src="bilder_klær_riktig/ny_logo.png" alt="logo" class="logo"></a>
       </section>
 
-
       <section class="usynlig1">
       </section>
 
-
-
       <!-- kode for logg inn, ønskeliste og handlekurv knappene er under her  -->
-      <section class="lenke logginn">
-
-
+      <section class="lenke">
         <a href="logginn.html"><img src="bilder_klær_riktig/innlogging.svg" alt="bilde" class="iconbilde"> </a>
-
         <a href="logginn.html"><br>LOGG INN</a>
-
       </section>
 
-
-      <section class="lenke logginn">
-
+      <!-- kode for  ønskeliste knappen er under her  -->
+      <section class="lenke">
         <a href="ønskeliste.html"><img src="bilder_klær_riktig/ønskeliste.png" alt="bilde" class="iconbilde"> </a>
-
         <a href="ønskeliste.html">ØNSKELISTE</a>
-
       </section>
-
-      <section class="lenke logginn">
-
+      <!-- kode for Handlekurv knappen er under her  -->
+      <section class="lenke">
         <a href="handlekurv.html"><img src="bilder_klær_riktig/kurv1.png" alt="bilde" class="iconbilde"> </a>
-
         <a href=handlekurv.html><br>KURV</a>
-
       </section>
 
     </section>
@@ -88,12 +73,10 @@
       <button type="submit"><i class="fa fa-search"></i></button>
     </section>
 
-
-
     <!-- kode for navigasjonbarene starter under her-->
     <nav class="navigation">
 
-      <!-- kode for dropned for navigasjons baren-->
+      <!-- kode for dropned for klær i navigasjons baren-->
       <section class="dropned">
         <a href="klær.html" class="dropknapp">Klær</a>
         <section class="dropned-content">
@@ -101,10 +84,8 @@
           <a href="bukser.html">Bukser</a>
           <a href="skjorter.html">skjorter</a>
           <a href="jakker.html">jakker</a>
-
         </section>
       </section>
-
 
       <section class="dropned">
         <a href="sport.html" class="dropknapp">Sport</a>
@@ -127,14 +108,12 @@
         <a href="salg.html" class="dropknapp">Salg</a>
       </section>
 
-
     </nav>
 
   </header>
   <!-- slutt på kode for header-->
 
-
-  <!-- kode for alt over main for sortering -->
+  <!-- kode for alt over main og main for sortering -->
   <section class="klær_hoved">
 
     <section class="usynlig_valg_linje"></section>
@@ -191,17 +170,11 @@
           <a onclick="farge_klaer_brun()">BRUN</a>
         </div>
       </div>
-
-
     </div>
-
-
 
 
     <!-- kode for å sortere i tabellen-->
     <section class="tabell_full">
-
-
       <ul class="tabell_halv">
         <li>
           <section class="klær_tekst">
@@ -212,8 +185,6 @@
         <li><a href="jakker.html" class="tabell_ord">Jakker</a></li>
         <li><a href="gensere.html" class="tabell_ord">Gensere</a></li>
         <li><a href="bukser.html" class="tabell_ord_valgt">Bukser </a></li>
-
-
       </ul>
     </section>
 
@@ -225,10 +196,8 @@
         Bærekraftig:
         <input class="Bærekraftig_boks" type="checkbox" onclick="baerekraftig()"></input>
       </section>
-
       <!--usynlig del i linje 2-->
       <section class="usynlig_linje2_valg">
-
       </section>
 
       <!-- sorterings knapp i linje 2-->
@@ -241,21 +210,17 @@
           <a onclick="nyheter_klaer()">Nyheter</a>
           <a onclick="billigste_klaer()">billigste</a>
           <a onclick="dyreste_klaer()">dyreste</a>
-
-
         </div>
       </div>
 
-
     </section>
 
-
+    <!-- kode for Main elemntet er under her  -->
     <main>
 
     </main>
 
   </section>
-
   <!-- kode for reklamen-->
   <section class="reklame2">
     <a href="klær.html"><img src="bilder_klær_riktig/reklame_2bild.jpg" alt="bilde"></a>
@@ -288,7 +253,6 @@
               <td><a href="oss.html">FÅ NYHETSBREV</a></td>
             </tr>
           </tbody>
-
         </table>
       </section>
 
@@ -316,9 +280,7 @@
               <td><a href="tilbehor.html">tilbehør</a></td>
             </tr>
           </tbody>
-
         </table>
-
       </section>
 
       <!-- kode for linje 3 i footer -->
@@ -340,14 +302,9 @@
             <tr>
               <td><a href="oss.html">historikk</a></td>
             </tr>
-
           </tbody>
-
         </table>
-
       </section>
-
-
 
       <!-- del i footer for sosiale medier bildene -->
       <section class="sosial_footer">
@@ -368,9 +325,6 @@
 
         </table>
       </section>
-
-
-
     </section>
   </footer>
 
@@ -379,11 +333,7 @@
     const main = document.querySelector("main"); // Variabel som referer til mian-elementet
     //Skriver referanser til database under her:
     const db = firebase.database();
-    const bukser = db.ref("varer/bukser");
-
-
-
-
+    const bukser = db.ref("varer/bukser"); //Referere til dataene som ligger under varer/bukser.
 
 
     function visVare(snapshot) {
@@ -416,8 +366,6 @@
       }
 
 
-
-
     function visVare_andre_vei(snapshot) {
       //Javascript-funksjon som skriver varene ut på nettsiden i main-elementet bare andre vei
       let varer = snapshot.val();
@@ -443,24 +391,22 @@
 
 
 
-
-
     function bukser1() {
       // Funksjoner til spørringene
       main.innerHTML = ``; // sletter innholdet i main.
       bukser
         .orderByChild("modell")
-        .on("child_added", visVare);
+        .on("child_added", visVare); // viser frem det spesifikke vi vil vise på den måten vi har valgt i visVare
     }
 
 
-
+    // Funksjoner for hva slags bukse merke det er
     function merke_klaer() {
       main.innerHTML = ``; // sletter innholdet i main.
       bukser
-        .orderByChild("merke1")
-        .equalTo("Ralph Lauren")
-        .on("child_added", visVare);
+        .orderByChild("merke1") // sorterer etter merke1 fra databasen
+        .equalTo("Ralph Lauren") // merke 1 skal være lik Ralph Lauren
+        .on("child_added", visVare); // viser frem det spesifikke vi vil vise
     }
 
     function merke2_klaer() {
