--- a/KaranSinMorsommeFerie/A Hoved Database/handlekurv.html
+++ b/KaranSinMorsommeFerie/A Hoved Database/handlekurv.html
@@ -5,7 +5,8 @@
   <meta charset="UTF-8">
 
   <link rel="stylesheet" href="handlekurv.css">
-  <script src="handlekurv.js"></script>
+  <script src="handlekurv.js">
+  </script>
   <title>Log in</title>
 
 </head>
@@ -17,59 +18,41 @@
 
     <section class="header_øverst">
 
-
+      <!-- kode for den lange hvite linjen øverst -->
       <section class="lang">
-        Gratis <b><span style="color:blue"> frakt</span></b> og <b><span style="color:blue">retur</span></b> året rundt
+        <a>Gratis <b><span style="color:blue"> frakt</span></b> og <b><span style="color:blue">retur</span></b> året rundt</a>
       </section>
 
       <section class="usynlig">
-
       </section>
 
+      <!-- kode for logoen -->
       <section class="logo">
         <a href="index.html"><img src="bilder_klær_riktig/ny_logo.png" alt="logo" class="logo"></a>
       </section>
 
-
       <section class="usynlig1">
       </section>
 
-
-
-
-
       <!-- kode for logg inn, ønskeliste og handlekurv knappene er under her  -->
-
-      <section class="lenke logginn">
-
-
+      <section class="lenke">
         <a href="logginn.html"><img src="bilder_klær_riktig/innlogging.svg" alt="bilde" class="iconbilde"> </a>
-
         <a href="logginn.html"><br>LOGG INN</a>
-
       </section>
 
 
-
-      <section class="lenke logginn ønskeliste">
-
+      <section class="lenke">
         <a href="ønskeliste.html"><img src="bilder_klær_riktig/ønskeliste.png" alt="bilde" class="iconbilde"> </a>
-
         <a href="ønskeliste.html">ØNSKELISTE</a>
-
       </section>
 
-      <section class="lenke logginn handlekurv">
-
-
+      <section class="lenke">
         <a href="handlekurv.html"><img src="bilder_klær_riktig/kurv1.png" alt="bilde" class="iconbilde"> </a>
-
         <a href=handlekurv.html><br>KURV</a>
-
-
       </section>
 
     </section>
+    <!-- slutt på kode for handlekurv, ønskeliste og logg inn -->
     <!-- kode for søkefeltet -->
     <section class="søkemotor">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -77,13 +60,10 @@
       <button type="submit"><i class="fa fa-search"></i></button>
     </section>
 
-
-
     <!-- kode for navigasjonbarene starter under her-->
-
     <nav class="navigation">
 
-
+      <!-- kode for dropned for navigasjons baren-->
       <section class="dropned">
         <a href="klær.html" class="dropknapp">Klær</a>
         <section class="dropned-content">
@@ -91,21 +71,17 @@
           <a href="bukser.html">Bukser</a>
           <a href="skjorter.html">skjorter</a>
           <a href="jakker.html">jakker</a>
-
         </section>
       </section>
 
-
-
+      <!-- kode for Sport i Navigasjonsbar-->
       <section class="dropned">
         <a href="sport.html" class="dropknapp">Sport</a>
-
       </section>
 
       <section class="dropned">
         <a href="tilbehor.html" class="dropknapp">Tilbehør</a>
       </section>
-
 
       <section class="dropned">
         <a href="sko.html" class="dropknapp">Sko</a>
@@ -113,27 +89,27 @@
 
       <section class="dropned">
         <a href="nyheter.html" class="dropknapp">Nyheter</a>
-
       </section>
 
       <section class="dropned">
         <a href="salg.html" class="dropknapp">Salg</a>
-
       </section>
-
-
 
     </nav>
 
   </header>
+  <!-- slutt på kode for header-->
+
   <main>
+    <button class="tilbake_knapp" onclick="goBack()"><--Tilbake</button>
+
     <div class="shopping-cart">
-  <!-- Title -->
+  <!-- Tittle -->
   <div class="title">
    HANDLEKURV
   </div>
 
-  <!-- Product #1 -->
+  <!-- Produkt 1 -->
   <div class="item">
     <div class="buttons">
       <span class="delete-btn"></span>
@@ -141,7 +117,7 @@
     </div>
 
     <div class="image">
-      <img src="bilder_klær_riktig/handlekurv1.jpg" alt="" />
+      <img src="bilder_klær_riktig/sport001a.jpg" alt="" />
     </div>
 
     <div class="description">
@@ -152,18 +128,18 @@
 
     <div class="quantity">
       <button class="plus-btn" type="button" name="button">
-        <img src="plus.svg" alt="" />
+        <img src="bilder_klær_riktig/plus.jpg" alt="" />
       </button>
       <input type="text" name="name" value="1">
       <button class="minus-btn" type="button" name="button">
-        <img src="minus.svg" alt="" />
+        <img src="bilder_klær_riktig/minus.png" alt="" />
       </button>
     </div>
 
     <div class="total-price">549 kr</div>
   </div>
 
-  <!-- Product #2 -->
+  <!-- Produkt 2 -->
   <div class="item">
     <div class="buttons">
       <span class="delete-btn"></span>
@@ -171,7 +147,7 @@
     </div>
 
     <div class="image">
-      <img src="bilder_klær_riktig/handlekurv2.jpg"  alt=""/>
+      <img src="bilder_klær_riktig/jakke004a.jpg"  alt=""/>
     </div>
 
     <div class="description">
@@ -182,18 +158,18 @@
 
     <div class="quantity">
       <button class="plus-btn" type="button" name="button">
-        <img src="plus.svg"  alt="" />
+        <img src="plus.png"  alt="" />
       </button>
       <input type="text" name="name" value="1">
       <button class="minus-btn" type="button" name="button">
-        <img src="minus.svg" alt="" />
+        <img src="minus.png" alt="" />
       </button>
     </div>
 
     <div class="total-price">979 kr</div>
   </div>
 
-  <!-- Product #3 -->
+  <!-- Produkt 3 -->
   <div class="item">
     <div class="buttons">
       <span class="delete-btn"></span>
@@ -201,22 +177,22 @@
     </div>
 
     <div class="image">
-      <img src="bilder_klær_riktig/handlekurv3.jpg" class="bilde"  alt="" />
+      <img src="bilder_klær_riktig/genser005a.jpg" class="bilde"  alt="" />
     </div>
 
     <div class="description">
       <span>LYLE&SCOTT</span>
       <span>Brushed sweater</span>
-      <span>Grå</span>
+      <span>Blå</span>
     </div>
 
     <div class="quantity">
       <button class="plus-btn" type="button" name="button">
-        <img src="plus.svg" alt="" />
+        <img src="plus.png" alt="" />
       </button>
       <input type="text" name="name" value="1">
       <button class="minus-btn" type="button" name="button">
-        <img src="minus.svg" alt="" />
+        <img src="minus.png" alt="" />
       </button>
     </div>
 
@@ -226,9 +202,110 @@
   <a href="logginn.html" class="fortsett_knapp">FORTSETT</a>
 </div>
   </main>
-
-
+  <!-- kode for innholdet i footer -->
   <footer>
 
+    <section class="hele_footer">
 
+      <!-- kode for linje 1 i footer -->
+      <section class="om_oss_footer">
+        <table>
+          <thead>
+            <tr>
+              <th>INFORMASJON</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td><a href="logginn.html"> LOGG INN</a></td>
+            </tr>
+            <tr>
+              <td><a href="ønskeliste.html">ØNSKELISTE</a></td>
+            </tr>
+            <tr>
+              <td><a href="kundeservice.html">KONTAKT OSS</a></td>
+            </tr>
+            <tr>
+              <td><a href="oss.html">FÅ NYHETSBREV</a></td>
+            </tr>
+          </tbody>
+        </table>
+      </section>
+
+      <!-- kode for linje 2 i footer -->
+      <section class="oss_footer">
+        <table>
+          <thead>
+            <tr>
+              <th><a href="index.html">VARER</a></th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td> <a href="klær.html">klær</a>
+              </td>
+            </tr>
+            <tr>
+              <td><a href="sport.html">sport</a>
+              </td>
+            </tr>
+            <tr>
+              <td><a href="sko.html">sko</a></td>
+            </tr>
+            <tr>
+              <td><a href="tilbehor.html">tilbehør</a></td>
+            </tr>
+          </tbody>
+        </table>
+      </section>
+
+      <!-- kode for linje 3 i footer -->
+      <section class="oss_footer">
+        <table>
+          <thead>
+            <tr>
+              <th><a href="oss.html">OM OSS</a></th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td><a href="oss.html">søk jobb</a></td>
+            </tr>
+            <tr>
+              <td><a href="oss.html">ansatte</a>
+              </td>
+            </tr>
+            <tr>
+              <td><a href="oss.html">historikk</a></td>
+            </tr>
+          </tbody>
+        </table>
+      </section>
+
+      <!-- del i footer for sosiale medier bildene -->
+      <section class="sosial_footer">
+        <table>
+          <thead>
+            <tr>
+              <th>Følg oss</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td><a href="http://www.facebook.com"><img src="bilder_klær_riktig/face.png" class="sosbilder"></a></td>
+              <td><a href="http://www.twitter.com"><img src="bilder_klær_riktig/twit.png" class="sosbilder"></a></td>
+              <td><a href="http://www.instagram.com"><img src="bilder_klær_riktig/insta.jpg" class="sosbilder"></a></td>
+            </tr>
+
+          </tbody>
+
+        </table>
+      </section>
+    </section>
   </footer>
+
+  <script>
+    function goBack() {
+      window.history.back();
+    }
+  </script>
