--- a/KaranSinMorsommeFerie/A Hoved Database/klær.html
+++ b/KaranSinMorsommeFerie/A Hoved Database/klær.html
@@ -28,74 +28,56 @@
 
 <body>
   <header>
-
+    <!-- seksjon for den delen over søkemotoren -->
     <section class="header_øverst">
 
-
+      <!-- kode for den lange hvite linjen øverst -->
       <section class="lang">
         <a>Gratis <b><span style="color:blue"> frakt</span></b> og <b><span style="color:blue">retur</span></b> året rundt</a>
       </section>
 
       <section class="usynlig">
-
       </section>
 
+      <!-- kode for logoen -->
       <section class="logo">
         <a href="index.html"><img src="bilder_klær_riktig/ny_logo.png" alt="logo" class="logo"></a>
       </section>
 
-
       <section class="usynlig1">
       </section>
 
-
-
-
-      <section class="lenke logginn">
-
-
+      <!-- kode for logg inn, ønskeliste og handlekurv knappene er under her  -->
+      <section class="lenke">
         <a href="logginn.html"><img src="bilder_klær_riktig/innlogging.svg" alt="bilde" class="iconbilde"> </a>
-
         <a href="logginn.html"><br>LOGG INN</a>
-
       </section>
 
-
-
-
-
-      <section class="lenke logginn">
-
+      <!-- kode for  ønskeliste knappen er under her  -->
+      <section class="lenke">
         <a href="ønskeliste.html"><img src="bilder_klær_riktig/ønskeliste.png" alt="bilde" class="iconbilde"> </a>
-
         <a href="ønskeliste.html">ØNSKELISTE</a>
-
       </section>
-
-      <section class="lenke logginn">
-
-
+      <!-- kode for Handlekurv knappen er under her  -->
+      <section class="lenke">
         <a href="handlekurv.html"><img src="bilder_klær_riktig/kurv1.png" alt="bilde" class="iconbilde"> </a>
-
         <a href=handlekurv.html><br>KURV</a>
-
       </section>
 
     </section>
+    <!-- slutt på kode for handlekurv, ønskeliste og logg inn -->
 
-
+    <!-- kode for søkefeltet -->
     <section class="søkemotor">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
       <input type="text" placeholder="Søk etter klær eller merker...">
       <button type="submit"><i class="fa fa-search"></i></button>
     </section>
 
-
+    <!-- kode for navigasjonbarene starter under her-->
     <nav class="navigation">
 
-
-
-
+      <!-- kode for dropned for klær i navigasjons baren-->
       <section class="dropned">
         <a href="klær.html" class="dropknapp">Klær</a>
         <section class="dropned-content">
@@ -103,12 +85,9 @@
           <a href="bukser.html">Bukser</a>
           <a href="skjorter.html">skjorter</a>
           <a href="jakker.html">jakker</a>
-
         </section>
       </section>
 
-
-      <!-- kode for knapper som ikke har dropdown i navigasjons baren-->
       <section class="dropned">
         <a href="sport.html" class="dropknapp">Sport</a>
       </section>
@@ -124,29 +103,19 @@
 
       <section class="dropned">
         <a href="nyheter.html" class="dropknapp">Nyheter</a>
-
       </section>
 
       <section class="dropned">
         <a href="salg.html" class="dropknapp">Salg</a>
-
       </section>
-
-
-
 
     </nav>
 
   </header>
-
-
-
-
+  <!-- slutt på kode for header-->
 
 
   <section class="klær_hoved">
-
-
 
     <section class="usynlig_valg_linje"></section>
     <div class="valg_klær1">
@@ -193,7 +162,6 @@
           <a onclick="farge_klaer_hvit()">HVIT</a>
           <a onclick="farge_klaer_svart()">SVART</a>
           <a onclick="farge_klaer_blå()">BLÅ</a>
-
         </div>
       </div>
 
@@ -201,7 +169,6 @@
 
     <!-- kode for å sortere i tabellen-->
     <section class="tabell_full">
-
 
       <ul class="tabell_halv">
         <li>
@@ -212,8 +179,6 @@
         <li><a href="jakker.html" class="tabell_ord">Jakker</a></li>
         <li><a href="gensere.html" class="tabell_ord">Gensere</a></li>
         <li><a href="bukser.html" class="tabell_ord">Bukser </a></li>
-
-
       </ul>
     </section>
     <!-- kode i linjen under den første linjen med sortering. for å sortere etter bærkraftig og flerer forskjellige ting under knappen sorter-->
@@ -227,7 +192,6 @@
 
       <!--usynlig del i linje 2-->
       <section class="usynlig_linje2_valg">
-
       </section>
 
       <!-- sorterings knapp i linje 2-->
@@ -240,14 +204,10 @@
           <a onclick="nyheter_klaer()">Nyheter</a>
           <a onclick="billigste_klaer()">billigste</a>
           <a onclick="dyreste_klaer()">dyreste</a>
-
-
         </div>
       </div>
 
-
     </section>
-
 
     <main>
 
@@ -287,7 +247,6 @@
               <td><a href="oss.html">FÅ NYHETSBREV</a></td>
             </tr>
           </tbody>
-
         </table>
       </section>
 
@@ -315,9 +274,7 @@
               <td><a href="tilbehor.html">tilbehør</a></td>
             </tr>
           </tbody>
-
         </table>
-
       </section>
 
       <!-- kode for linje 3 i footer -->
@@ -339,11 +296,8 @@
             <tr>
               <td><a href="oss.html">historikk</a></td>
             </tr>
-
           </tbody>
-
         </table>
-
       </section>
 
 
@@ -362,18 +316,13 @@
               <td><a href="http://www.twitter.com"><img src="bilder_klær_riktig/twit.png" class="sosbilder"></a></td>
               <td><a href="http://www.instagram.com"><img src="bilder_klær_riktig/insta.jpg" class="sosbilder"></a></td>
             </tr>
-
           </tbody>
-
         </table>
       </section>
-
-
 
     </section>
   </footer>
   <!-- footer slutter her-->
-
 
   <!-- javascript starter under her -->
 
@@ -381,7 +330,7 @@
     const main = document.querySelector("main"); // Variabel som referer til mian-elementet
     //Skriver referanser til database under her:
     const db = firebase.database();
-    const bukser = db.ref("varer/bukser");
+    const bukser = db.ref("varer/bukser"); //Referere til dataene som ligger under varer/bukser.
     const skjorter = db.ref("varer/skjorter");
     const gensere = db.ref("varer/gensere");
     const sport = db.ref("varer/sport");
@@ -401,14 +350,13 @@
       let parentParent = snapshot.ref.parent.parent.key;
       let ref = parent + "/" + key;
       let prisTekst = ``;
-      if(varer.Salg === true){
+      if (varer.Salg === true) {
         prisTekst = `<p class="pris_varer_salg">Pris: ${varer.pris} kr</p>`;
-      }
-      else{
+      } else {
         prisTekst = `<p class="pris_varer">Pris: ${varer.pris} kr</p>`
       }
 
-        console.log(snapshot.val())
+      console.log(snapshot.val())
 
       main.innerHTML +=
         `
@@ -444,110 +392,6 @@
         ` +
         main.innerHTML;
     }
-
-
-
-    function visAlle() {
-      // Funksjoner til spørringene
-      main.innerHTML = ""; // sletter innholdet i main.
-      bukser
-        .orderByChild("merke1")
-        .on("child_added", visVare);
-      skjorter
-        .orderByChild("merke1")
-        .on("child_added", visVare);
-      sko
-        .orderByChild("merke1")
-        .on("child_added", visVare);
-      tilbehor
-        .orderByChild("merke1")
-        .on("child_added", visVare);
-      gensere
-        .orderByChild("merke1")
-        .on("child_added", visVare);
-      sport
-        .orderByChild("merke1")
-        .on("child_added", visVare);
-      jakker
-        .orderByChild("merke1")
-        .on("child_added", visVare);
-
-    }
-
-    function klaer() {
-      // Funksjoner til spørringene
-      main.innerHTML = ""; // sletter innholdet i main.
-      bukser
-        .on("child_added", visVare);
-      skjorter
-        .on("child_added", visVare);
-      gensere
-        .on("child_added", visVare);
-      jakker
-        .on("child_added", visVare);
-    }
-
-    function sko1() {
-      // Funksjoner til spørringene
-      main.innerHTML = ""; // sletter innholdet i main.
-      sko
-        .orderByChild("modell")
-        .on("child_added", visVare);
-    }
-
-    function sport1() {
-      // Funksjoner til spørringene
-      main.innerHTML = ""; // sletter innholdet i main.
-      sport
-        .orderByChild("modell")
-        .on("child_added", visVare);
-    }
-
-    function tilbehor1() {
-      main.innerHTML = ``;
-      tilbehor
-        .orderByChild("modell")
-        .on("child_added", visVare);
-    }
-
-    function bukser1() {
-      main.innerHTML = ``;
-      bukser
-        .orderByChild("modell")
-        .on("child_added", visVare);
-    }
-
-    function gensere1() {
-      main.innerHTML = ``;
-      gensere
-        .orderByChild("modell")
-        .on("child_added", visVare);
-    }
-
-    function skjorter1() {
-      main.innerHTML = ``;
-      skjorter
-        .orderByChild("modell")
-        .on("child_added", visVare);
-    }
-
-
-    function jakker1() {
-      main.innerHTML = ``;
-      jakker
-        .orderByChild("modell")
-        .on("child_added", visVare);
-    }
-
-    function salg1() {
-      main.innerHTML = ``;
-      salg
-        .orderByChild("modell")
-        .on("child_added", visVare);
-    }
-
-
-
 
 
 
