--- a/KaranSinMorsommeFerie/A Hoved Database/nyheter.html
+++ b/KaranSinMorsommeFerie/A Hoved Database/nyheter.html
@@ -28,74 +28,56 @@
 
 <body>
   <header>
-
+    <!-- seksjon for den delen over søkemotoren -->
     <section class="header_øverst">
 
-
+      <!-- kode for den lange hvite linjen øverst -->
       <section class="lang">
         <a>Gratis <b><span style="color:blue"> frakt</span></b> og <b><span style="color:blue">retur</span></b> året rundt</a>
       </section>
 
       <section class="usynlig">
-
       </section>
 
+      <!-- kode for logoen -->
       <section class="logo">
         <a href="index.html"><img src="bilder_klær_riktig/ny_logo.png" alt="logo" class="logo"></a>
       </section>
 
-
       <section class="usynlig1">
       </section>
 
-
-
-
-      <section class="lenke logginn">
-
-
+      <!-- kode for logg inn, ønskeliste og handlekurv knappene er under her  -->
+      <section class="lenke">
         <a href="logginn.html"><img src="bilder_klær_riktig/innlogging.svg" alt="bilde" class="iconbilde"> </a>
-
         <a href="logginn.html"><br>LOGG INN</a>
-
       </section>
 
-
-
-
-
-      <section class="lenke logginn">
-
+      <!-- kode for  ønskeliste knappen er under her  -->
+      <section class="lenke">
         <a href="ønskeliste.html"><img src="bilder_klær_riktig/ønskeliste.png" alt="bilde" class="iconbilde"> </a>
-
         <a href="ønskeliste.html">ØNSKELISTE</a>
-
       </section>
-
-      <section class="lenke logginn">
-
-
+      <!-- kode for Handlekurv knappen er under her  -->
+      <section class="lenke">
         <a href="handlekurv.html"><img src="bilder_klær_riktig/kurv1.png" alt="bilde" class="iconbilde"> </a>
-
         <a href=handlekurv.html><br>KURV</a>
-
       </section>
 
     </section>
+    <!-- slutt på kode for handlekurv, ønskeliste og logg inn -->
 
-
+    <!-- kode for søkefeltet -->
     <section class="søkemotor">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
       <input type="text" placeholder="Søk etter klær eller merker...">
       <button type="submit"><i class="fa fa-search"></i></button>
     </section>
 
-
+    <!-- kode for navigasjonbarene starter under her-->
     <nav class="navigation">
 
-
-
-
+      <!-- kode for dropned for klær i navigasjons baren-->
       <section class="dropned">
         <a href="klær.html" class="dropknapp">Klær</a>
         <section class="dropned-content">
@@ -103,12 +85,9 @@
           <a href="bukser.html">Bukser</a>
           <a href="skjorter.html">skjorter</a>
           <a href="jakker.html">jakker</a>
-
         </section>
       </section>
 
-
-      <!-- kode for knapper som ikke har dropdown i navigasjons baren-->
       <section class="dropned">
         <a href="sport.html" class="dropknapp">Sport</a>
       </section>
@@ -124,54 +103,31 @@
 
       <section class="dropned">
         <a href="nyheter.html" class="dropknapp">Nyheter</a>
-
       </section>
 
       <section class="dropned">
         <a href="salg.html" class="dropknapp">Salg</a>
-
       </section>
-
-
-
 
     </nav>
 
   </header>
-
-
-
-
+  <!-- slutt på kode for header-->
 
 
   <section class="klær_hoved">
 
-
-
-
-
-
-
     <!-- kode for å sortere i tabellen-->
     <section class="tabell_full">
-
 
       <ul class="tabell_halv">
         <li>
           <section class="klær_tekst"><a onclick="nyheter_alle()">NYHETER</a>
           </section>
         </li>
-
-
-        </div>
-      </div>
-
-
     </section>
 
-
     <main>
-
     </main>
 
   </section>
@@ -289,8 +245,6 @@
         </table>
       </section>
 
-
-
     </section>
   </footer>
 
@@ -308,8 +262,6 @@
     const jakker = db.ref("varer/jakker");
     const sko = db.ref("varer/sko");
     const tilbehor = db.ref("varer/tilbehor");
-
-
 
 
 
@@ -343,8 +295,6 @@
     }
 
 
-
-
     function visVare_andre_vei(snapshot) {
       //Javascript-funksjon som skriver varene ut på nettsiden i main-elementet bare andre vei
       let varer = snapshot.val();
@@ -373,9 +323,6 @@
         </article>
       `;
       }
-
-
-
 
 
             function nyheter_alle() {
