--- a/KaranSinMorsommeFerie/A Hoved Database/skjorter.html
+++ b/KaranSinMorsommeFerie/A Hoved Database/skjorter.html
@@ -28,7 +28,7 @@
 
 <body>
   <header>
-
+    <!-- seksjon for den delen over søkemotoren -->
     <section class="header_øverst">
 
       <!-- kode for den lange hvite linjen øverst -->
@@ -37,7 +37,6 @@
       </section>
 
       <section class="usynlig">
-
       </section>
 
       <!-- kode for logoen -->
@@ -45,37 +44,24 @@
         <a href="index.html"><img src="bilder_klær_riktig/ny_logo.png" alt="logo" class="logo"></a>
       </section>
 
-
       <section class="usynlig1">
       </section>
 
-
-
       <!-- kode for logg inn, ønskeliste og handlekurv knappene er under her  -->
-      <section class="lenke logginn">
-
-
+      <section class="lenke">
         <a href="logginn.html"><img src="bilder_klær_riktig/innlogging.svg" alt="bilde" class="iconbilde"> </a>
-
         <a href="logginn.html"><br>LOGG INN</a>
-
       </section>
 
-
-      <section class="lenke logginn">
-
+      <!-- kode for  ønskeliste knappen er under her  -->
+      <section class="lenke">
         <a href="ønskeliste.html"><img src="bilder_klær_riktig/ønskeliste.png" alt="bilde" class="iconbilde"> </a>
-
         <a href="ønskeliste.html">ØNSKELISTE</a>
-
       </section>
-
-      <section class="lenke logginn">
-
+      <!-- kode for Handlekurv knappen er under her  -->
+      <section class="lenke">
         <a href="handlekurv.html"><img src="bilder_klær_riktig/kurv1.png" alt="bilde" class="iconbilde"> </a>
-
         <a href=handlekurv.html><br>KURV</a>
-
       </section>
 
     </section>
@@ -88,13 +74,10 @@
       <button type="submit"><i class="fa fa-search"></i></button>
     </section>
 
-
-
     <!-- kode for navigasjonbarene starter under her-->
     <nav class="navigation">
 
-
-      <!-- kode for dropned for navigasjons baren-->
+      <!-- kode for dropned for klær i navigasjons baren-->
       <section class="dropned">
         <a href="klær.html" class="dropknapp">Klær</a>
         <section class="dropned-content">
@@ -125,7 +108,6 @@
       <section class="dropned">
         <a href="salg.html" class="dropknapp">Salg</a>
       </section>
-
 
     </nav>
 
@@ -186,15 +168,11 @@
         </div>
       </div>
 
-
     </div>
-
-
 
 
     <!-- kode for å sortere i tabellen-->
     <section class="tabell_full">
-
 
       <ul class="tabell_halv">
         <li>
@@ -206,8 +184,6 @@
         <li><a href="jakker.html" class="tabell_ord">Jakker</a></li>
         <li><a href="gensere.html" class="tabell_ord">Gensere</a></li>
         <li><a href="bukser.html" class="tabell_ord">Bukser </a></li>
-
-
       </ul>
     </section>
 
@@ -222,7 +198,6 @@
 
       <!--usynlig del i linje 2-->
       <section class="usynlig_linje2_valg">
-
       </section>
 
       <!-- sorterings knapp i linje 2-->
@@ -235,17 +210,13 @@
           <a onclick="nyheter_klaer()">Nyheter</a>
           <a onclick="billigste_klaer()">billigste</a>
           <a onclick="dyreste_klaer()">dyreste</a>
-
-
         </div>
       </div>
 
 
     </section>
 
-
     <main>
-
     </main>
 
   </section>
@@ -282,7 +253,6 @@
               <td><a href="oss.html">FÅ NYHETSBREV</a></td>
             </tr>
           </tbody>
-
         </table>
       </section>
 
@@ -310,9 +280,7 @@
               <td><a href="tilbehor.html">tilbehør</a></td>
             </tr>
           </tbody>
-
         </table>
-
       </section>
 
       <!-- kode for linje 3 i footer -->
@@ -334,11 +302,8 @@
             <tr>
               <td><a href="oss.html">historikk</a></td>
             </tr>
-
           </tbody>
-
         </table>
-
       </section>
 
 
@@ -357,12 +322,9 @@
               <td><a href="http://www.twitter.com"><img src="bilder_klær_riktig/twit.png" class="sosbilder"></a></td>
               <td><a href="http://www.instagram.com"><img src="bilder_klær_riktig/insta.jpg" class="sosbilder"></a></td>
             </tr>
-
           </tbody>
-
         </table>
       </section>
-
 
 
     </section>
@@ -373,7 +335,8 @@
     const main = document.querySelector("main"); // Variabel som referer til mian-elementet
     //Skriver referanser til database under her:
     const db = firebase.database();
-    const skjorter = db.ref("varer/skjorter");
+    const skjorter = db.ref("varer/skjorter");//Referere til dataene som ligger under varer/skjorter.
+
 
 
     function visVare(snapshot) {
@@ -440,8 +403,8 @@
       // Funksjoner til spørringene
       main.innerHTML = ``; // sletter innholdet i main.
       skjorter
-        .orderByChild("modell")
-        .on("child_added", visVare);
+        .orderByChild("modell") // sorterer etter modell fra databasen
+        .on("child_added", visVare); // viser frem det spesifikke vi vil vise på den måten vi har valgt i visVare
     }
 
 
