--- a/KaranSinMorsommeFerie/A Hoved Database/sko.html
+++ b/KaranSinMorsommeFerie/A Hoved Database/sko.html
@@ -28,7 +28,7 @@
 
 <body>
   <header>
-
+    <!-- seksjon for den delen over søkemotoren -->
     <section class="header_øverst">
 
       <!-- kode for den lange hvite linjen øverst -->
@@ -37,7 +37,6 @@
       </section>
 
       <section class="usynlig">
-
       </section>
 
       <!-- kode for logoen -->
@@ -45,37 +44,24 @@
         <a href="index.html"><img src="bilder_klær_riktig/ny_logo.png" alt="logo" class="logo"></a>
       </section>
 
-
       <section class="usynlig1">
       </section>
 
-
-
       <!-- kode for logg inn, ønskeliste og handlekurv knappene er under her  -->
-      <section class="lenke logginn">
-
-
+      <section class="lenke">
         <a href="logginn.html"><img src="bilder_klær_riktig/innlogging.svg" alt="bilde" class="iconbilde"> </a>
-
         <a href="logginn.html"><br>LOGG INN</a>
-
       </section>
 
-
-      <section class="lenke logginn">
-
+      <!-- kode for  ønskeliste knappen er under her  -->
+      <section class="lenke">
         <a href="ønskeliste.html"><img src="bilder_klær_riktig/ønskeliste.png" alt="bilde" class="iconbilde"> </a>
-
         <a href="ønskeliste.html">ØNSKELISTE</a>
-
       </section>
-
-      <section class="lenke logginn">
-
+      <!-- kode for Handlekurv knappen er under her  -->
+      <section class="lenke">
         <a href="handlekurv.html"><img src="bilder_klær_riktig/kurv1.png" alt="bilde" class="iconbilde"> </a>
-
         <a href=handlekurv.html><br>KURV</a>
-
       </section>
 
     </section>
@@ -88,12 +74,10 @@
       <button type="submit"><i class="fa fa-search"></i></button>
     </section>
 
-
-
     <!-- kode for navigasjonbarene starter under her-->
     <nav class="navigation">
 
-      <!-- kode for dropned for navigasjons baren-->
+      <!-- kode for dropned for klær i navigasjons baren-->
       <section class="dropned">
         <a href="klær.html" class="dropknapp">Klær</a>
         <section class="dropned-content">
@@ -101,11 +85,8 @@
           <a href="bukser.html">Bukser</a>
           <a href="skjorter.html">skjorter</a>
           <a href="jakker.html">jakker</a>
-
         </section>
       </section>
-
-      <!-- kode for knapper som ikke har dropdown i navigasjons baren-->
 
       <section class="dropned">
         <a href="sport.html" class="dropknapp">Sport</a>
@@ -127,7 +108,6 @@
       <section class="dropned">
         <a href="salg.html" class="dropknapp">Salg</a>
       </section>
-
 
     </nav>
 
@@ -219,7 +199,6 @@
 
       <!--usynlig del i linje 2-->
       <section class="usynlig_linje2_valg">
-
       </section>
 
       <!-- sorterings knapp i linje 2-->
@@ -232,17 +211,13 @@
           <a onclick="nyheter_klaer()">Nyheter</a>
           <a onclick="billigste_klaer()">billigste</a>
           <a onclick="dyreste_klaer()">dyreste</a>
-
-
         </div>
       </div>
 
 
     </section>
 
-
     <main>
-
     </main>
 
   </section>
@@ -279,7 +254,6 @@
               <td><a href="oss.html">FÅ NYHETSBREV</a></td>
             </tr>
           </tbody>
-
         </table>
       </section>
 
@@ -307,9 +281,7 @@
               <td><a href="tilbehor.html">tilbehør</a></td>
             </tr>
           </tbody>
-
         </table>
-
       </section>
 
       <!-- kode for linje 3 i footer -->
@@ -331,14 +303,9 @@
             <tr>
               <td><a href="oss.html">historikk</a></td>
             </tr>
-
           </tbody>
-
         </table>
-
       </section>
-
-
 
       <!-- del i footer for sosiale medier bildene -->
       <section class="sosial_footer">
@@ -354,12 +321,9 @@
               <td><a href="http://www.twitter.com"><img src="bilder_klær_riktig/twit.png" class="sosbilder"></a></td>
               <td><a href="http://www.instagram.com"><img src="bilder_klær_riktig/insta.jpg" class="sosbilder"></a></td>
             </tr>
-
           </tbody>
-
         </table>
       </section>
-
 
 
     </section>
@@ -370,11 +334,7 @@
     const main = document.querySelector("main"); // Variabel som referer til mian-elementet
     //Skriver referanser til database under her:
     const db = firebase.database();
-    const sko = db.ref("varer/sko");
-
-
-
-
+    const sko = db.ref("varer/sko");//Referere til dataene som ligger under varer/sko.
 
 
     function visVare(snapshot) {
@@ -385,14 +345,13 @@
       let parentParent = snapshot.ref.parent.parent.key;
       let ref = parent + "/" + key;
       let prisTekst = ``;
-      if(varer.Salg === true){
+      if (varer.Salg === true) {
         prisTekst = `<p class="pris_varer_salg">Pris: ${varer.pris} kr</p>`;
-      }
-      else{
+      } else {
         prisTekst = `<p class="pris_varer">Pris: ${varer.pris} kr</p>`
       }
 
-        console.log(snapshot.val())
+      console.log(snapshot.val())
 
       main.innerHTML +=
         `
@@ -404,10 +363,7 @@
         </a>
         </article>
       `;
-      }
-
-
-
+    }
 
 
     function visVare_andre_vei(snapshot) {
@@ -433,16 +389,12 @@
     }
 
 
-
-
-
-
     function sko1() {
       // Funksjoner til spørringene
       main.innerHTML = ``; // sletter innholdet i main.
       sko
-        .orderByChild("modell")
-        .on("child_added", visVare);
+        .orderByChild("modell") // sorterer etter modell fra databasen
+        .on("child_added", visVare);// viser frem det spesifikke vi vil vise på den måten vi har valgt i visVare
     }
 
 
