--- a/KaranSinMorsommeFerie/A Hoved Database/sport.html
+++ b/KaranSinMorsommeFerie/A Hoved Database/sport.html
@@ -28,90 +28,68 @@
 
 <body>
   <header>
-
+    <!-- seksjon for den delen over søkemotoren -->
     <section class="header_øverst">
 
-
+      <!-- kode for den lange hvite linjen øverst -->
       <section class="lang">
         <a>Gratis <b><span style="color:blue"> frakt</span></b> og <b><span style="color:blue">retur</span></b> året rundt</a>
       </section>
 
       <section class="usynlig">
-
       </section>
 
+      <!-- kode for logoen -->
       <section class="logo">
         <a href="index.html"><img src="bilder_klær_riktig/ny_logo.png" alt="logo" class="logo"></a>
       </section>
 
-
       <section class="usynlig1">
       </section>
 
-
-
-
-      <section class="lenke logginn">
-
-
+      <!-- kode for logg inn, ønskeliste og handlekurv knappene er under her  -->
+      <section class="lenke">
         <a href="logginn.html"><img src="bilder_klær_riktig/innlogging.svg" alt="bilde" class="iconbilde"> </a>
-
         <a href="logginn.html"><br>LOGG INN</a>
-
       </section>
 
-
-
-
-
-      <section class="lenke logginn">
-
+      <!-- kode for  ønskeliste knappen er under her  -->
+      <section class="lenke">
         <a href="ønskeliste.html"><img src="bilder_klær_riktig/ønskeliste.png" alt="bilde" class="iconbilde"> </a>
-
         <a href="ønskeliste.html">ØNSKELISTE</a>
-
       </section>
-
-      <section class="lenke logginn">
-
-
+      <!-- kode for Handlekurv knappen er under her  -->
+      <section class="lenke">
         <a href="handlekurv.html"><img src="bilder_klær_riktig/kurv1.png" alt="bilde" class="iconbilde"> </a>
-
-        <a href="handlekurv.html"><br>KURV</a>
-
+        <a href=handlekurv.html><br>KURV</a>
       </section>
 
     </section>
+    <!-- slutt på kode for handlekurv, ønskeliste og logg inn -->
 
-
+    <!-- kode for søkefeltet -->
     <section class="søkemotor">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
       <input type="text" placeholder="Søk etter klær eller merker...">
       <button type="submit"><i class="fa fa-search"></i></button>
     </section>
 
-
+    <!-- kode for navigasjonbarene starter under her-->
     <nav class="navigation">
 
-
-
-
+      <!-- kode for dropned for klær i navigasjons baren-->
       <section class="dropned">
         <a href="klær.html" class="dropknapp">Klær</a>
         <section class="dropned-content">
           <a href="gensere.html">gensere</a>
-          <a href="sport.html">sport</a>
+          <a href="bukser.html">Bukser</a>
           <a href="skjorter.html">skjorter</a>
           <a href="jakker.html">jakker</a>
-
         </section>
       </section>
 
-
-
       <section class="dropned">
         <a href="sport.html" class="dropknapp">Sport</a>
-
       </section>
 
       <section class="dropned">
@@ -125,33 +103,25 @@
 
       <section class="dropned">
         <a href="nyheter.html" class="dropknapp">Nyheter</a>
-
       </section>
 
       <section class="dropned">
         <a href="salg.html" class="dropknapp">Salg</a>
-
       </section>
-
-
-
 
     </nav>
 
   </header>
-
-
-
-
-
+  <!-- slutt på kode for header-->
 
   <section class="klær_hoved">
 
 
+    <section class="usynlig_valg_linje">
+    </section>
 
-    <section class="usynlig_valg_linje"></section>
+    <!--kode for sorteringsmulighetene-->
     <div class="valg_klær1">
-
 
       <div class="dropdown">
         <button onclick="myFunction()" class="dropbtn">Merke</button>
@@ -249,10 +219,12 @@
   </section>
 
 
+  <!-- kode for innholdet i footer -->
   <footer>
 
     <section class="hele_footer">
 
+      <!-- kode for linje 1 i footer -->
       <section class="om_oss_footer">
         <table>
           <thead>
@@ -274,10 +246,10 @@
               <td><a href="oss.html">FÅ NYHETSBREV</a></td>
             </tr>
           </tbody>
-
         </table>
       </section>
 
+      <!-- kode for linje 2 i footer -->
       <section class="oss_footer">
         <table>
           <thead>
@@ -301,11 +273,10 @@
               <td><a href="tilbehor.html">tilbehør</a></td>
             </tr>
           </tbody>
-
         </table>
-
       </section>
 
+      <!-- kode for linje 3 i footer -->
       <section class="oss_footer">
         <table>
           <thead>
@@ -324,16 +295,11 @@
             <tr>
               <td><a href="oss.html">historikk</a></td>
             </tr>
-
           </tbody>
-
         </table>
-
       </section>
 
-
-
-
+      <!-- del i footer for sosiale medier bildene -->
       <section class="sosial_footer">
         <table>
           <thead>
@@ -352,28 +318,15 @@
 
         </table>
       </section>
-
-
-
     </section>
   </footer>
 
-
+  <!-- javascript starter under her -->
   <script>
     const main = document.querySelector("main"); // Variabel som referer til mian-elementet
     //Skriv referanser til database under her:
     const db = firebase.database();
-    const varer = db.ref("varer");
-    const bukser = db.ref("varer/bukser");
-    const skjorter = db.ref("varer/skjorter");
-    const gensere = db.ref("varer/gensere");
-    const sport = db.ref("varer/sport");
-    const jakker = db.ref("varer/jakker");
-    const sko = db.ref("varer/sko");
-    const tilbehor = db.ref("varer/tilbehor");
-
-
-
+    const sport = db.ref("varer/sport"); //Referere til dataene som ligger under varer/sport.
 
 
     function visVare(snapshot) {
@@ -384,14 +337,13 @@
       let parentParent = snapshot.ref.parent.parent.key;
       let ref = parent + "/" + key;
       let prisTekst = ``;
-      if(varer.Salg === true){
+      if (varer.Salg === true) {
         prisTekst = `<p class="pris_varer_salg">Pris: ${varer.pris} kr</p>`;
-      }
-      else{
+      } else {
         prisTekst = `<p class="pris_varer">Pris: ${varer.pris} kr</p>`
       }
 
-        console.log(snapshot.val())
+      console.log(snapshot.val())
 
       main.innerHTML +=
         `
@@ -403,7 +355,7 @@
         </a>
         </article>
       `;
-      }
+    }
 
 
 
@@ -437,8 +389,8 @@
       // Funksjoner til spørringene
       main.innerHTML = ""; // sletter innholdet i main.
       sport
-        .orderByChild("modell")
-        .on("child_added", visVare);
+        .orderByChild("modell") // sorterer etter modell fra databasen
+        .on("child_added", visVare); // viser frem det spesifikke vi vil vise på den måten vi har valgt i visVare
     }
 
 
@@ -446,15 +398,15 @@
     function merke_klaer() {
       main.innerHTML = ``;
       sport
-        .orderByChild("merke1")
-        .equalTo("nike")
-        .on("child_added", visVare);
+        .orderByChild("merke1") // sorterer etter merke1 fra databasen
+        .equalTo("nike") // merke 1 skal være lik nike
+        .on("child_added", visVare); // viser frem det spesifikke vi vil vise på den måten vi har valgt i visVare
     }
 
     function merke2_klaer() {
       main.innerHTML = ``;
       sport
-        .orderByChild("merke1")
+        .orderByChild("merke1") // sorterer etter merke1 fra databasen
         .equalTo("HUGO BOSS")
         .on("child_added", visVare)
 
@@ -467,7 +419,6 @@
         .equalTo("adidas")
         .on("child_added", visVare);
     }
-
 
 
 
